Update dimens and color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">SOF User</string>
     <string name="msg_no_network">No network connection. Please check your network connection.</string>
     <string name="sof_user_title">StackOverFlow User List</string>
+    <string name="reputation">Reputation</string>
     <string name="reputation_history">Reputation History</string>
     <string name="full_date_time_format">"MMM dd yyyy HH:mm"</string>
     <string name="short_date_time_format">"MMM dd HH:mm"</string>
@@ -9,4 +10,5 @@
     <string name="all_sof_user">All SOF User</string>
     <string name="bookmarked_user">Bookmarked User</string>
     <string name="str_press_back_exit">Press back again to close this app</string>
+    <string name="content_description">Image view content description</string>
 </resources>
